# easy-struct

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  simplestruct.py
